<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/dark_grey">


    <TextView
        android:id="@+id/txtWelcome"
        style="@style/viewCustom"
        android:paddingTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:fontFamily="@font/righteous"
        android:textColor="@color/green_fitvolution"/>



    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="30dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"/>

    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/tvLogin"
        style="@style/viewCustom"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:onClick="login"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:onClick="forgotPassword"
        android:paddingTop="0dp"
        android:gravity="center_horizontal"
        android:text="@string/forgotPassword"
        android:textSize="12sp"
        android:textColor="@color/orange"/>

    <LinearLayout
        android:id="@+id/lyTerms"
        style="@style/viewCustom"
        android:orientation="horizontal"
        android:background="@color/dark_grey">
        <CheckBox
            android:id="@+id/cbAcept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/accept"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:onClick="goTerms"/>
    </LinearLayout>

    <Button
        android:id="@+id/btSignGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_google"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingLeft="30dp"
        android:onClick="callSignInGoogle"/>

    <Button
        android:id="@+id/btSignFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_facebook"
        android:text="@string/facebook"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingLeft="30dp"/>

</LinearLayout>